# NexusSpec

./: LICENSE  README.md  pyproject.toml
docs/: tutorial.md
prompts/: pdr_geral.md  plan.md  prd_tarefa.md
src/nexusspec/: __init__.py  cli.py
src/nexusspec/templates/: techspec_tarefa.md
