[project]
name = "nexusspec"
version = "0.1.0"
description = "CLI para inicializar projetos com o workflow NexusSpec (SDD)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LucasFerrDev" }]
keywords = ["sdd", "spec-driven", "workflow", "cli", "copilot"]
dependencies = ["click>=8.0"]

[project.scripts]
nexusspec = "nexusspec.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexusspec"]
